fixed element shifting with border hover
Also working on getting cart to be added and shown instantly on button press instead of on refresh

--- a/src/Pages/ProductItem/ProductItem.css
+++ b/src/Pages/ProductItem/ProductItem.css
@@ -19,10 +19,12 @@
     justify-content: center;
     gap: 1rem;
     height: 5rem;
+    box-sizing: border-box;
 }
 
 .product-subimg {
-    /* border: solid black 1px; */
+    border: solid transparent 3px;
+    padding: 1px;
     height: 6rem;
     width: 6rem;
     object-fit: cover;
@@ -30,7 +32,6 @@
 }
 
 .product-subimg:hover {
-    /* box-sizing: border-box; */
     border: solid black 3px;
     padding: 1px;
 }
@@ -46,7 +47,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    /* border: solid black 1px; */
 }
 
 .purchase-container {
